--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque quos similique, asperiores minus voluptas repudiandae nesciunt a? Architecto omnis ducimus adipisci iusto eveniet illo quis, dolorem amet accusantium voluptas repellat.</p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque quos similique, asperiores minus voluptas repudiandae nesciunt a? Architecto omnis ducimus adipisci iusto eveniet illo quis, dolorem amet accusantium voluptas repellat.
+    </p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
